--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "bootstrap": "^5.2.1",
     "firebase": "^9.10.0",
     "pinia": "^2.0.21",
     "roboto-fontface": "*",
